--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -78,11 +78,14 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    .specsSpan {
+      display: inline-block;
+    }
     .time {
       color: $light-grey;
       img {
         height: 14px;
-        width: 14px;
+        width: 19px;
         padding-right: 5px;
       }
     }
@@ -92,7 +95,7 @@ body {
       letter-spacing: 0.025px;
       img {
         height: 14px;
-        width: 8px;
+        width: 13px;
         padding-right: 5px;
       }
     }
