--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
 body {
   height: 100vh;
   width: 100vw;
@@ -47,20 +48,23 @@ body {
 .wrapper div img {
   width: 300px;
   height: 300px;
-  border-radius: 10px;
+  border-radius: 8px;
   padding: 0px;
 }
 
 .wrapper .wrapperTitle {
   color: white;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 22px;
+  margin-top: 3px;
 }
 
 .wrapper .wrapperDesc {
   color: rgba(255, 255, 255, 0.5);
   font-size: 18px;
   font-weight: 300;
+  margin-top: -1px;
+  line-height: 27px;
 }
 
 .wrapper .wrapperDivider {
@@ -122,6 +126,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 5px;
+  margin-bottom: -1px;
 }
 
 .wrapper .wrapperSpecs .specsSpan {
@@ -130,23 +136,49 @@ body {
 
 .wrapper .wrapperSpecs .time {
   color: rgba(255, 255, 255, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .wrapper .wrapperSpecs .time img {
-  height: 14px;
-  width: 19px;
-  padding-right: 5px;
+  height: 17px;
+  width: 17px;
+  padding-right: 7px;
 }
 
 .wrapper .wrapperSpecs .cost {
   color: #00fff7;
   font-weight: 600;
-  letter-spacing: 0.025px;
+  letter-spacing: 1px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .wrapper .wrapperSpecs .cost img {
-  height: 14px;
-  width: 13px;
+  height: 15px;
+  width: 10px;
   padding-right: 5px;
 }
 
